@@ -24,6 +24,14 @@
         <role>Developer</role>
       </roles>
     </developer>
+    <developer>
+      <name>FiorellaContreras</name>
+      <organization>UCUDAL</organization>
+      <email>fiorellacontreras@gmail.com</email>
+      <roles>
+        <role>Developer</role>
+      </roles>
+    </developer>
   </developers>
   <packaging>jar</packaging>
   <properties>
@@ -150,7 +158,10 @@
         <artifactId>javafx-maven-plugin</artifactId>
         <version>0.0.8</version>
         <configuration>
-          <mainClass>App</mainClass>
+          <mainClass>ucu.edu.uy.App</mainClass>
+          <options>
+            <option>--add-modules</option>
+        </options>
         </configuration>
       </plugin>
       <plugin>
@@ -237,7 +248,6 @@
               <jre>
                 <path>${env.JAVA_HOME}/jre</path>
               </jre>
-
               <versionInfo>
                 <fileVersion>1.0.0.0</fileVersion>
                 <txtFileVersion>${project.version}</txtFileVersion>
@@ -321,7 +331,7 @@
         <executions>
           <execution>
             <id>id.package.ant</id>
-            <phase>package</phase>
+            <phase>verify</phase>
             <goals>
               <goal>run</goal>
             </goals>
@@ -333,7 +343,7 @@
                 <move file="${project.build.directory}/Main_1.0.rpm" tofile="${project.build.directory}/Installers/Main.rpm" />
                 <move file="${project.build.directory}/Agent.jar" tofile="${project.build.directory}/Executables/Agent.jar" />
                 <move file="${project.build.directory}/Main.jar" tofile="${project.build.directory}/Executables/Main.jar" />
-                <delete file="${project.build.directory}/Agent-Installer-1.0-runnable.jar" />
+                <!-- <delete file="${project.build.directory}/Agent-Installer-1.0-runnable.jar"/> -->
                 <delete file="${project.build.directory}/Agent-Installer_1.0.msm" />
                 <delete file="${project.build.directory}/Main_1.0.changes" />
                 <delete file="${project.build.directory}/Main_1.0.exe" />
